# lab5

./: CMakeLists.txt
MStackLib/: CMakeLists.txt  MStack.h
MStackTest/: CMakeLists.txt  mStackTest.cpp
StackLib/: CMakeLists.txt  Stack.cpp  Stack.h
